--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "@codemirror/state": "^6.2.0",
     "@codemirror/theme-one-dark": "^6.1.2",
     "@codemirror/view": "^6.2.0",
+    "body-parser": "^2.2.0",
     "brython": "^3.13.1",
     "codemirror": "^6.0.1",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lucide-react": "^0.509.0",
     "next": "15.3.2",
     "react": "^19.0.0",
